# Hack4Good-2024-IMPACT

./: Makefile  README.md  environment.yml  pyproject.toml  setup.cfg
DELTE/: Makefile  environment.yml  setup.cfg
src/: calculate_meb.py  main.py  notebook_main.ipynb
src/modeling_permutation/: admin1_dataset_creater.py  admin_2_3_dataset_creater.py  arima_imputation.py  finding_nearest_cities.py  global_regression.py  imputation_controler.py  local_regression.py  prim_imputations.py
src/modeling_prediction/: model.py  prediction_controler.py
src/preprocessing/: complete_months_list.py  data_cleaning.py  data_loading.py  gen_raw_admins.py  get_mean.py  preprocessong_controler.py  remove_outliers.py
src/results/: data_export.py  visualization.py
src/set_up/: addresses_constants.py  constants.py  interface.py  labels.py
