[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "imapct"
version = "0.0.1"
description = "Code4Good 2024 IMPACT challenge. fill in missing data and predict future data of prices."
authors = [
  { name = "Diana, Gabriel, Malei, Teodora, YunFei" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["impact"]
force_sort_within_sections = true
